--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "antd": "^4.23.1",
     "react": "^18.2.0",
     "react-calendar": "^3.8.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "react-toastify": "^9.0.8"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
