--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "typescript": "^4.8.2"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "http-errors": "^2.0.0",
